--- a/assignment1.Rmd
+++ b/assignment1.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Statistical assignment 1"
-author: "[add your name and candidate number here]"
-date: "[add date here]"
+author: "Connor Kowalewski (680011991) Candidate Number: 084707"
+date: "30/01/2020"
 output: github_document
 ---
 
@@ -15,7 +15,7 @@ In this assignment you will work with the individual level data from wave 8 of t
 
 ```{r}
 library(tidyverse)
-Data <- ...
+Data <- read.csv(file.choose (), sep = "\t")
 ```
 
 Now you have got your data frame stored as Data. 
@@ -29,8 +29,7 @@ First, you need to select the variables for the analysis. You want to keep the f
 Complete the code below to select those variables from the data frame and save the result.
 
 ```{r}
-Data <- Data %>%
-        select(...)
+Data <- select(Data, pidp, h_eumem, h_sex_dv, h_age_dv, h_memorig)
 ```
 
 ## Filter observations (10 points)
@@ -38,8 +37,7 @@ Data <- Data %>%
 To make nationally representative estimates from the Understanding Society data we would need to use weight coefficients. There are many different types of weight coefficients that can be used depending on the question and the level of analysis (see the User Guide, pp. 65-71). We will not do this in this assignment. However, what we want to do is to keep data from the original Understanding Society sample only (ukhls gb 2009-10), dropping  data for Northern Ireland, the BHPS cohort members and ethnic minority boost samples. This will make data closer to be representative for Great Britain. You need to choose the observations where *h_memorig* has the value of 1.
 
 ```{r}
-Data <- Data %>%
-        filter(...)
+Data <- filter(Data, h_memorig == 1)
 ```
 
 ## Recode data (20 points)
@@ -64,12 +62,19 @@ In all cases, we want to create new variables.
 
 ```{r}
 Data <- Data %>%
-        mutate(EU = ...
-      
-        ) %>%
-        mutate(sex = ...) %>%
-        mutate(agegr = ...
-        )
+        mutate(EU = ifelse(h_eumem == 1, 1,
+                    ifelse(h_eumem == 2, 0, NA)))
+Data <- Data %>%
+        mutate(sex = ifelse(h_sex_dv == 1, "Male", 
+                     ifelse(h_sex_dv == 2, "Female", NA))) 
+        
+Data <- Data %>%
+        mutate(agegr = case_when(
+          between(h_age_dv, 16, 25)~"16 to 25",
+          between(h_age_dv, 26, 40)~"26 to 40",
+          between(h_age_dv, 41, 55)~"41 to 55",
+          between(h_age_dv, 56, 70)~"56 to 70",
+          h_age_dv >= 70~"Over 70"))
 
 ```
 
@@ -79,11 +84,14 @@ Let us **dplyr** to calculate how many people in the sample supported Remain and
 
 ```{r}
 Data %>%
-        ...
+        count(EU) %>%
+        mutate(perc = n / sum(n) * 100)
         
 ```
 
 Write a couple of sentences with the interpretation of this result. How this compares with the result of the 2016 referendum? Why?
+
+This is an interesting result because it suggests more respondents supported remain at 48.4% compared with those who supported leave at 40.7% (rounded to 1dp). This would appear to contradict the result of the 2016 referendum where those who voted leave won. Obviusly though we must take into account the limitations that this is a much smaller population compared to those who took part in the referendum and there is also a sizeable amount of NAs at 2501 which constitues 10.9% (rounded to 1dp) of the entire sample. 
 
 ## Summarise data by sex and age (30 points)
 
@@ -91,10 +99,25 @@ Now let us look at the support for Leave and Remain by sex and age. Use your new
 
 
 ```{r}
+
 Data %>%
-        ...
-        
+  group_by(sex) %>%
+     count(EU) %>%
+        mutate(perc = n / sum(n) * 100)
+
+Data %>%
+  group_by(agegr) %>%
+     count(EU) %>%
+        mutate(perc = n / sum(n) * 100)
 ```
 
 
 Write a couple of sentences interpreting your results.
+
+(Results were rounded to 1dp for interpretation)
+
+SEX
+We can see that roughly 38.9% (4859) of women supported leaving the EU compared with 51% (6371) supporting remain. This suggests females were more in support of remaining than leaving, though around 10% of responses are recorded as NA which is something to bare in mind, alongside the small sample size. Men on the otherhand seem to be much more evenly split only just favouring for remain at 45.3% (4746) compared with 42.8% (4479) leaving. Again though there is a high number of NAs at 11.9%. All in all though it appears both sexes supported, though to varying degrees, remain over leave. 
+
+Age
+When we look at age we can see a very clear pattern in that the younger age groups will overwhelmingly seem to favour remaining whilst the older age groups will tend to prefer leave. In the 16 to 25 for example, 60.6% (1749) are remainer compared with just 26.4% (763) identifying as leave and the sizeable rest being NAs (12.9%, 373). Compare this with the over 70s category where 50.6% preferred leave and only 35.3% favoured remain, and you see the pattern at its most strongest. As with all age groups though the issue of a high amount of NAs remains. 
